Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17045

MyRocks tables cannot be updated when binlog_format=MIXED.

    XMLWordPrintable

Details

    Description

      One cannot update a MyRocks table when they have binlog_format=MIXED:

      MariaDB [test]> create table t1 (pk int primary key) engine=rocksdb;
      Query OK, 0 rows affected (0.15 sec)
       
      MariaDB [test]> insert into t1 values (1);
      ERROR 4056 (HY000): Can't execute updates on master with binlog_format != ROW.
      MariaDB [test]> 
      MariaDB [test]> select @@binlog_format;
      +-----------------+
      | @@binlog_format |
      +-----------------+
      | MIXED           |
      +-----------------+
      1 row in set (0.00 sec)
      

      This doesn't make sense from a user perspective:

      • MyRocks supports RBR only
      • binlog_format=MIXED means "try to use SBR but switch to RBR if required".
      • I expect that I'm able to run MyRocks with binlog_format=mixed and get RBR logging for updates to MyRocks tables.

      Attachments

        Activity

          People

            psergei Sergei Petrunia
            psergei Sergei Petrunia
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3.5h
                3.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.