MDEV-17045: MyRocks tables cannot be updated when binlog_format=MIXED.