storage/rocksdb/ha_rocksdb.h
@@ -863,31 +863,7 @@ public:
     This is a list of flags that indicate what functionality the storage engine
     implements. The current table flags are documented in handler.h
   */
-  ulonglong table_flags() const override {
-    DBUG_ENTER_FUNC();
-
-    /*
-      HA_BINLOG_STMT_CAPABLE
-        We are saying that this engine is just statement capable to have
-        an engine that can only handle statement-based logging. This is
-        used in testing.
-      HA_REC_NOT_IN_SEQ
-        If we don't set it, filesort crashes, because it assumes rowids are
-        1..8 byte numbers
-      HA_PRIMARY_KEY_IN_READ_INDEX
-        This flag is always set, even for tables that:
-        - have no PK
-        - have some (or all) of PK that can't be decoded from the secondary
-          index.
-    */
-    DBUG_RETURN(HA_BINLOG_ROW_CAPABLE | HA_BINLOG_STMT_CAPABLE |
-                HA_REC_NOT_IN_SEQ | HA_CAN_INDEX_BLOBS |
-                HA_PRIMARY_KEY_IN_READ_INDEX |
-                HA_PRIMARY_KEY_REQUIRED_FOR_POSITION | HA_NULL_IN_KEY |
-                HA_PARTIAL_COLUMN_READ |
-                HA_TABLE_SCAN_ON_INDEX);
-  }
-
+  ulonglong table_flags() const override ;
 private:
   bool init_with_fields(); /* no 'override' in MariaDB */
 public:
